--- a/Q-A-App(Android)/app/src/main/res/values/strings.xml
+++ b/Q-A-App(Android)/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="submit_question">Submit Question</string>
     <string name="type_a_message">Type a message</string>
     <string name="send">Send</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
